fix(frontend): Correcting positioning of misaligned spinner and publish button

--- a/frontend/src/assets/scss/pages/_post.scss
+++ b/frontend/src/assets/scss/pages/_post.scss
@@ -88,3 +88,8 @@
         text-align: center;
     }
 }
+
+.postSpinnerWrapper{
+    display: flex;
+    justify-content: center;
+}
